--- a/TASKS/printNum.html
+++ b/TASKS/printNum.html
@@ -8,7 +8,7 @@
 
              for (let i = 1; i <= 10; i++)
             {
-              document.write(i)
+              console.log(i)
             }
        </script>
     </body>
