--- a/TASKS/printSumNum.html
+++ b/TASKS/printSumNum.html
@@ -12,7 +12,7 @@
                sum += i;
              }
 
-             console.log("The sum of numbers from 1 to 10 is: " + sum);
+             console.log( + sum);
         </script>
     </body>
 </html>
