--- a/TASKS/Task7.html
+++ b/TASKS/Task7.html
@@ -4,14 +4,14 @@
         <h2>Calculate the sum of odd numbers greater than 10 and less than 30.
         </h2>
         <script>
-            let sum = 0;
+           let sum = 0;
 
-            for (let i = 11; i<30; i +=2) {
-                if (i % 2 === 1){
-                    sum +=1;
-                }
-            }
-            console.log ("" + sum);
+               for (let i = 10; i < 30; i += 2) {
+               sum += i;
+               }
+
+               console.log( + sum);
+
         </script>
     </body>
 </html>
