--- a/JavaScript_OBJECTS/JS_Objects_Display/StringifiyFunctions.html
+++ b/JavaScript_OBJECTS/JS_Objects_Display/StringifiyFunctions.html
@@ -8,7 +8,8 @@
                 name : "John",
                 age : function () {return 30;}
             };
-
+            person.age = person.age.toString();
+            
             console.log(JSON.stringify(person));
         </script>
     </body>
