--- a/TASKS_2/Task1.html
+++ b/TASKS_2/Task1.html
@@ -25,7 +25,7 @@
 
   <script>
     const button = document.getElementById('colorButton');
-    const colors = ['green', 'sky', 'blue', 'red', 'gray'];
+    const colors = ['green', 'yellow', 'blue', 'red', 'gray'];
     let currentIndex = 0;
 
     button.addEventListener('click', () => {
