Add_New_Proerty

--- a/JavaScript_OBJECTS/JS_Object_Constructors/jsConstructors.html
+++ b/JavaScript_OBJECTS/JS_Object_Constructors/jsConstructors.html
@@ -9,9 +9,9 @@
                 this.age = age;
                 this.eyecolor = eye;
             }
-            const myfriend = new person("Golu", "Doe", 40, "blue" );
+            const myFriend = new person("Golu", "Doe", 40, "blue" );
 
-            console.log("My friend is "  + myfriend.age + ".");
+            console.log("My friend is "  + myFriend.age + ".");
         </script>
     </body>
 </html>
